# shaderbox

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  docker-compose.yaml  example.py  imgui.ini  itch-config.example  pyproject.toml  upload-itch.sh
.claude/skills/copilot-llm-agent-design/: SKILL.md
.claude/skills/dogfood/: SKILL.md
.claude/skills/imgui-ui/: SKILL.md
.claude/skills/sanitize/: SKILL.md
.claude/skills/shader-lab/: SKILL.md  render_node.py
.claude/skills/ship/: SKILL.md
.github/workflows/: ci.yml
ai_docs/: conventions.md  dev_flow.md  roadmap.md  todo.md  worklog.md
ai_docs/_audit_2026-06-13/: audit_workflow.js  report.md
ai_docs/design/: README.md  SPEC.md  prototype.html  tokens.json
ai_docs/features/: 001_exporter_refactor.md  002_ui_widgets_extraction.md  003_modelbox_removal.md  004_imgui_bundle_migration.md  005_ui_redesign_foundation.md  006_inline_editor.md  007_release_pipeline_hardening.md  008_uniform_input_shapes.md  009_integrations_rework.md  010_outlet_render_rework.md  011_ui_library_consolidation.md  012_youtube_export.md  013_authoring_feedback_loop.md  014_compile_unit_refactor.md  015_shader_include_library.md  016_lib_file_management.md  017_structure_reorg.md  018_keyboard_control.md  019_keyboard_navigation.md  021_logging_refactor.md  022_copilot_chat_persistence.md  023_app_refinement_wave.md  025_project_session_extraction.md  026_copilot_dogfood_harness.md  026_dogfood_report_run1.md  026_dogfood_report_run2.md  026_dogfood_report_run3.md  026_dogfood_report_run4.md  027_interactive_dogfood_server.md  028_ui_polish_wave.md  029_tool_first_class_labels.md  031_parallel_structure_sweep.md  032_sdf_shader_library.md  033_copilot_robustness_wave.md  034_ui_polish_wave_2.md  035_dogfood_report_mega.md  036_anchored_replace_lines.md  037_dogfood_report_036anchor.md  038_copilot_polish_wave.md  039_content_addressed_editing.md  (+16 more)
ai_docs/features/020_copilot_agent/: 00_grounding.md  01_threading_architecture.md  02_tool_registry_seam.md  03_refactor_prep_audit.md  04_llm_integration.md  05_chat_ui_ux.md  06_glsl_domain.md  07_phasing_risk_spec.md  08_autosave_investigation.md  09_llm_layer_study.md  10_skeleton_plan.md  11_capability_wave_spec.md  12_edit_robustness.md  13_glsl_lexer.md  14_slice2_line_editing.md  15_edit_safety.md  16_cross_project_tools.md  17_gate_ui.md  18_render_publish_tools.md  19_credential_pack_tools.md  20_ui_ux_polish.md  21_chat_widgets_and_links.md  22_template_library.md  23_uniform_history_chat_untangle.md  24_structural_shader_view.md  24_ui_polish_wave.md  25_context_fill_indicator.md  25_prompt_tier_architecture.md  30_turn_rollback.md  (+7 more)
ai_docs/itch/: page.yaml
ai_docs/scenarios/: 01_visual_blindness.md  02_wrong_node_targeting.md  03_compile_thrash.md  04_circle_square_morph.md  05_grep_readlib_uniforms.md  06_agent_error_recovery.md  README.md
docs/branding/: logo.frag.glsl
example/: main.py
example/shaders/: bright_pass.glsl  main.glsl  outline.glsl  parallax.glsl
nodes/2aecfbe7/: node.json  shader.frag.glsl
nodes/799765d9/: node.json
projects/dev/: app_state.json
scripts/: README.md  _tabbar_spike.py  copilot_gate_check.py  copilot_render_check.py  dogfood.py  gen_glyphs.py  render_node.py  run.bat  run.sh  smoke.py  token_probe.py
scripts/dogfood/: README.md  REPORT_TEMPLATE.md  __init__.py  analyze.py  harness.py  verify_script_engine.py
shaderbox/: __init__.py  _tg.py  _ui.py  app.py  commands.py  constants.py  core.py  editor_types.py  emoji_data.py  fonts.py  gl.py  glyph_tables.py  graph.py  hotkeys.py  integrations.py  lib_index.py  lib_tags.py  logging_setup.py  main.py  media.py  modelbox.py  notifications.py  paths.py  project_session.py  render_defer.py  render_preset.py  render_shape.py  renderer.py  settings.py  shader_errors.py  shader_source.py  sharing.py  telegram_provider.py  templates_descriptions.py  text_editor.py  tg.py  theme.py  ui.py  ui_models.py  ui_primitives.py  (+6 more)
shaderbox/copilot/: address.py  agent.py  backend.py  bridge.py  capabilities.py  checkpoint.py  config.py  context.py  edit_hints.py  errors.py  gate.py  glsl_lex.py  persistence.py  prompt.py  prompt_context.py  revert.py  sanitize.py  session.py  state.py  text_render.py  trace.py  wiring.py
shaderbox/exporters/: base.py  integrations.py  registry.py  stubs.py  telegram.py  telegram_util.py  youtube.py  youtube_util.py
shaderbox/popups/: editor_settings.py  emoji_picker.py  lib_picker.py  node_creator.py  settings.py
shaderbox/scripting/: __init__.py  behavior.py  context.py  engine.py  errors.py  outputs.py
shaderbox/shader_lib/: __init__.py  favorites.py  file_ops.py  index.py  parser.py  resolver.py  seed.py  tags.py
shaderbox/tabs/: code.py  copilot.py  node.py  render.py  share.py  share_state.py
shaderbox/widgets/: cheatsheet.py  copilot_chat.py  details.py  media_ops.py  node_grid.py  uniform.py
tests/: _caps.py  conftest.py  test_bridge_render_cue.py  test_checkpoint.py  test_command_routing.py  test_content_editing.py  test_conversation_persistence.py  test_copilot_focus.py  test_copilot_loop.py  test_copilot_script_tools.py  test_copilot_user_limits.py  test_credential_redaction.py  test_cross_project_tools.py  test_dogfood_analyze.py  test_edit_hints.py  test_edit_messages.py  test_edit_safety.py  test_gate_channel.py  test_glsl_lex.py  test_history_trim.py  test_lib_index.py  test_lib_seed.py  test_lib_tags.py  test_line_editing.py  test_markdown_lite.py  test_media_resolver.py  test_migration.py  test_motion_verdict.py  test_node_dir_sync.py  test_probe_clock_and_turn_end.py  test_prompt_blocks.py  test_render_cue_defer.py  test_render_defer.py  test_render_for.py  test_render_preset.py  test_render_shape.py  test_result_widgets.py  test_revert_executor.py  test_revert_restore.py  test_sanitize_display.py  (+19 more)
web/: .env.example  .prettierrc  package-lock.json  package.json
web/src/: app.css  app.d.ts
(+263 files in other folders)
