[project]
name = "shaderbox"
version = "0.1.0"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crossfiledialog>=1.0.0",
    "glfw>=2.8.0",
    "httpx>=0.28.1",
    "imageio[ffmpeg]>=2.37.0",
    "imgui[glfw]>=2.0.0",
    "litestar>=2.16.0",
    "loguru>=0.7.3",
    "moderngl>=5.12.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "platformdirs>=4.3.7",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.4",
    "pyimgui-stubs>=0.0.2",
    "python-telegram-bot>=22.0",
    "uvicorn>=0.34.2",
    "uuid>=1.30",
    "freetype-py>=2.5.1",
    "more-itertools>=10.7.0",
    "pyperclip>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shaderbox"]
include = ["shaderbox/resources/**/*"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "ruff>=0.3.4",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.lint.isort]
known-first-party = ["shaderbox"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "crossfiledialog.*",
    "glfw.*",
    "imageio.*",
    "imgui.*",
    "moderngl.*",
]
ignore_missing_imports = true
