[project]
name = "shaderbox"
version = "0.1.0"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "glfw>=2.8.0",
    "imageio[ffmpeg]>=2.37.0",
    "loguru>=0.7.3",
    "moderngl>=5.12.0",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "platformdirs>=4.3.7",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.4",
    "python-telegram-bot>=22.0",
    "freetype-py>=2.5.1",
    "more-itertools>=10.7.0",
    "pyperclip>=1.9.0",
    "imgui-bundle>=1.92.801",
    "pyopengl>=3.1.10",
    "imageio-ffmpeg>=0.6.0",
    "opencv-python-headless>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shaderbox"]
include = ["shaderbox/resources/**/*"]

[dependency-groups]
dev = [
    "pyright>=1.1.397",
    "pre-commit>=3.7.0",
    "ruff>=0.3.4",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.lint.isort]
known-first-party = ["shaderbox"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["shaderbox"]
# basic mode (default) — pyright over mypy here on purpose: fewer false positives,
# less friction. Tighten to "standard"/"strict" later if it earns it.
