[project]
name = "shaderbox"
version = "0.21.0"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "glfw>=2.10.0",
    "imageio[ffmpeg]>=2.37.3",
    "loguru>=0.7.3",
    "moderngl>=5.12.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "python-telegram-bot>=22.8",
    "pyperclip>=1.11.0",
    "imgui-bundle>=1.92.801",
    "pyopengl>=3.1.10",
    "imageio-ffmpeg>=0.6.0",
    "opencv-python-headless>=4.11.0.86",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "openai>=2.41.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shaderbox"]
include = ["shaderbox/resources/**/*"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pre-commit>=4.6.0",
    "ruff==0.15.17",
    "pytest>=9.1.0",
    "pytest-forked>=1.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Cyrillic glyph data/docs legitimately contain Cyrillic letters (gen_glyphs.py).
allowed-confusables = ["А", "В", "Е", "К", "М", "Н", "О", "Р", "С", "Т", "Х", "а", "е", "о", "с"]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.lint.isort]
known-first-party = ["shaderbox"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["shaderbox"]
# basic mode (default) — pyright over mypy here on purpose: fewer false positives,
# less friction. Tighten to "standard"/"strict" later if it earns it.
